<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>magpiebridge</groupId>
	<artifactId>magpiebridge</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>magpiebridge</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lsp4j</groupId>
			<artifactId>org.eclipse.lsp4j</artifactId>
			<version>0.5.0</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.wala</groupId>
			<artifactId>com.ibm.wala.core</artifactId>
			<version>1.5.3-20190221.171853-4</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.wala</groupId>
			<artifactId>com.ibm.wala.cast</artifactId>
			<version>1.5.3-20190221.171912-4</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.wala</groupId>
			<artifactId>com.ibm.wala.cast.java</artifactId>
			<version>1.5.3-20190221.171922-4</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.wala</groupId>
			<artifactId>com.ibm.wala.util</artifactId>
			<version>1.5.3-20190221.171822-4</version>
		</dependency>
		<!-- https://github.com/javaparser/javaparser -->
		<dependency>
			<groupId>com.github.javaparser</groupId>
			<artifactId>javaparser-core</artifactId>
			<version>3.13.0</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.coveo</groupId>
				<artifactId>fmt-maven-plugin</artifactId>
				<version>2.8</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>wala</id>
			<name>wala snapshots</name>
			<url>https://soot-build.cs.uni-paderborn.de/nexus/repository/wala/</url>
		</repository>
	</repositories>
</project>
